Overwrite default variables. TODO: Improve variable settings and propagation

--- a/docker-compose.gpu.yaml
+++ b/docker-compose.gpu.yaml
@@ -11,3 +11,12 @@ services:
               count: ${OLLAMA_GPU_COUNT-1}
               capabilities:
                 - gpu
+  open-webui:
+    # GPU support
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              device_ids: ['1']
+              capabilities: ["gpu"]
