Add multi model support

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,8 @@ services:
     restart: unless-stopped
     image: ollama/ollama:${OLLAMA_DOCKER_TAG-latest}
     environment:
-      - OLLAMA_ORIGINS=${OLLAMA_ORIGINS:-"chrome-extension://*"}
+      - OLLAMA_NUM_PARALLEL=${OLLAMA_RUN_PARALLEL:-2}
+      - OLLAMA_MAX_LOADED_MODELS=${OLLAMA_MAX_LOADED_MODELS:-2}
 
   open-webui:
     build:
